feat: Use relative path for links and files

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <link href="/dist/output.css" rel="stylesheet" />
+    <link href="./dist/output.css" rel="stylesheet" />
   </head>
   <body data-barba="wrapper">
     <div class="bg-slate-50 text-slate-700">
       <header class="bg-white">
         <nav class="container mx-auto py-6 px-5 px-md-8">
           <ul class="flex">
-            <li><a class="mr-4" href="index.html">Home</a></li>
+            <li><a class="mr-4" href="../index.html">Home</a></li>
           </ul>
         </nav>
       </header>
@@ -57,7 +57,7 @@
 
                 <a
                   class="inline-block py-4 px-6 rounded-md bg-gradient-to-b from-sky-300 to-red-400 text-white shadow-lg shadow-red-600/20 transition-all duration-300 hover:translate-y-0.5 hover:shadow-none font-bold"
-                  href="/transition-one.html"
+                  href="./transition-one.html"
                 >
                   Transition one
                 </a>
@@ -88,7 +88,7 @@
 
                 <a
                   class="inline-block py-4 px-6 rounded-md bg-sky-600 text-white shadow-lg shadow-sky-600/20 transition-all duration-300 hover:translate-y-0.5 hover:shadow-none font-bold"
-                  href="/transition-two.html"
+                  href="./transition-two.html"
                 >
                   Transition two
                 </a>
@@ -99,6 +99,6 @@
       </main>
     </div>
 
-    <script src="/index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
