--- a/transition-two.html
+++ b/transition-two.html
@@ -12,14 +12,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <link href="/dist/output.css" rel="stylesheet" />
+    <link href="./dist/output.css" rel="stylesheet" />
   </head>
   <body data-barba="wrapper">
     <div class="bg-slate-50 text-slate-700">
       <header class="bg-white">
         <nav class="container mx-auto py-6 px-5 px-md-8">
           <ul class="flex">
-            <li><a class="mr-4" href="index.html">Home</a></li>
+            <li><a class="mr-4" href="../index.html">Home</a></li>
           </ul>
         </nav>
       </header>
@@ -65,6 +65,6 @@
       </main>
     </div>
 
-    <script src="/index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
